--- a/1-samples/lab-1.02-android-persistence.ipynb
+++ b/1-samples/lab-1.02-android-persistence.ipynb
@@ -11,10 +11,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importing the necessary packages\n",
+    "import numpy as np                                  # \"Scientific computing\"\n",
+    "import scipy.stats as stats                         # Statistical tests\n",
+    "\n",
+    "import pandas as pd                                 # Data Frame\n",
+    "from pandas.api.types import CategoricalDtype\n",
+    "\n",
+    "import matplotlib.pyplot as plt                     # Basic visualisation\n",
+    "from statsmodels.graphics.mosaicplot import mosaic  # Mosaic diagram\n",
+    "import seaborn as sns                               # Advanced data visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/android_persistence_cpu.csv', delimiter=\";\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 300 entries, 0 to 299\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Time             300 non-null    float64\n",
+      " 1   PersistenceType  300 non-null    object \n",
+      " 2   DataSize         300 non-null    object \n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 7.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,10 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    300.000000\n",
+       "mean       6.230833\n",
+       "std        4.229599\n",
+       "min        1.090000\n",
+       "25%        1.790000\n",
+       "50%        6.185000\n",
+       "75%       10.662500\n",
+       "max       13.560000\n",
+       "Name: Time, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['DataSize'].describe()\n",
+    "df['PersistenceType'].describe()\n",
+    "df['Time'].describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +128,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>PersistenceType</th>\n",
+       "      <th>GreenDAO</th>\n",
+       "      <th>Realm</th>\n",
+       "      <th>SQLLite</th>\n",
+       "      <th>Sharedpreferences</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DataSize</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Large</th>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium</th>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Small</th>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "PersistenceType  GreenDAO  Realm  SQLLite  Sharedpreferences\n",
+       "DataSize                                                    \n",
+       "Large                  30     30       30                  0\n",
+       "Medium                 30     30       30                  0\n",
+       "Small                  30     30       30                 30"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(index=df['DataSize'], columns=df['PersistenceType'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +222,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.crosstab(index=df['DataSize'], columns=df['PersistenceType'])"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
