--- a/1-samples/lab-1.03-reflection.ipynb
+++ b/1-samples/lab-1.03-reflection.ipynb
@@ -31,6 +31,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Quantitative\n",
+        "    ## ratio\n",
+        "    ## interval\n",
+        "# Qualitative\n",
+        "    ## ordinal\n",
+        "    ## nominal\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "WoGXJZDI1cGb"
       },
