--- a/4-bivariate-qual/lab-4.07-digimeter-sample.ipynb
+++ b/4-bivariate-qual/lab-4.07-digimeter-sample.ipynb
@@ -11,9 +11,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 214,
       "metadata": {
-        "id": "j8I-eUfMSeNF"
+        "id": "j8I-eUfMSeNF",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
@@ -69,12 +70,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 275,
       "metadata": {
-        "id": "8yMICTgm_ood"
+        "id": "8yMICTgm_ood",
+        "metadata": {}
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Leeftijdsgroep</th>\n",
+              "      <th>Percentage</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>15-19</td>\n",
+              "      <td>6.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>20-29</td>\n",
+              "      <td>14.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>30-39</td>\n",
+              "      <td>15.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>40-49</td>\n",
+              "      <td>16.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>50-59</td>\n",
+              "      <td>17.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>60-64</td>\n",
+              "      <td>7.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>64+</td>\n",
+              "      <td>23.2</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Leeftijdsgroep  Percentage\n",
+              "0          15-19         6.6\n",
+              "1          20-29        14.2\n",
+              "2          30-39        15.0\n",
+              "3          40-49        16.3\n",
+              "4          50-59        17.3\n",
+              "5          60-64         7.3\n",
+              "6            64+        23.2"
+            ]
+          },
+          "execution_count": 275,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df1 = pd.read_csv('../data/leeftijden-digimeter.csv')\n",
+        "\n",
+        "df1"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -87,12 +174,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 251,
       "metadata": {
-        "id": "q6iIdrNFDm7U"
+        "id": "q6iIdrNFDm7U",
+        "metadata": {}
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "df2 = pd.read_csv('../data/leeftijden-bestat-vl.csv')\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,13 +197,200 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 252,
       "metadata": {
-        "id": "wy1vq1xiFIfs"
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[15, 19], [20, 29], [30, 39], [40, 49], [50, 59], [60, 64], [65, 99]]"
+            ]
+          },
+          "execution_count": 252,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ages = df1['Leeftijdsgroep'].unique()\n",
+        "ages[6] = '65-99'\n",
+        "ages = [x.split('-') for x in ages]\n",
+        "ages = [[int(i) for i in x] for x in ages]\n",
+        "ages"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 253,
+      "metadata": {
+        "id": "wy1vq1xiFIfs",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
-        "\n"
+        "\n",
+        "df2['From'] = df2['age.group'].str[0:3].str.split(\"-\").str[0]\n",
+        "df2['To'] = df2['age.group'].str.split(\"-\").str[1]\n",
+        "    \n",
+        "df2['To'] = df2['To'].fillna(999)\n",
+        "\n",
+        "df2['From'] = df2['From'].astype('Int64')\n",
+        "df2['To'] = df2['To'].astype('int64')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [],
+      "source": [
+        "df2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [],
+      "source": [
+        "df2['sum'] =  (df2['From'].astype(str) + df2['To'].astype(str)).astype(int)\n",
+        "df2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 260,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0     24198.768\n",
+            "1    108289.200\n",
+            "2    121630.800\n",
+            "3    155209.415\n",
+            "4    151718.059\n",
+            "5     27688.973\n",
+            "6    267609.912\n",
+            "dtype: float64\n",
+            "  Leeftijdsgroep  Percentage\n",
+            "0          15-19         6.6\n",
+            "1          20-29        14.2\n",
+            "2          30-39        15.0\n",
+            "3          40-49        16.3\n",
+            "4          50-59        17.3\n",
+            "5          60-64         7.3\n",
+            "6            64+        23.2\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age.group</th>\n",
+              "      <th>population</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>[15, 19]</td>\n",
+              "      <td>366648</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>[20, 29]</td>\n",
+              "      <td>762600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>[30, 39]</td>\n",
+              "      <td>810872</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>[40, 49]</td>\n",
+              "      <td>952205</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>[50, 59]</td>\n",
+              "      <td>876983</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>[60, 64]</td>\n",
+              "      <td>379301</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>[65, 99]</td>\n",
+              "      <td>1153491</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  age.group  population\n",
+              "0  [15, 19]      366648\n",
+              "1  [20, 29]      762600\n",
+              "2  [30, 39]      810872\n",
+              "3  [40, 49]      952205\n",
+              "4  [50, 59]      876983\n",
+              "5  [60, 64]      379301\n",
+              "6  [65, 99]     1153491"
+            ]
+          },
+          "execution_count": 260,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df3 = pd.DataFrame(columns=['age.group', 'population'])\n",
+        "  \n",
+        "for i, a in enumerate(ages):\n",
+        "    df3.loc[i] = {'age.group': a, 'population': 0}\n",
+        "    \n",
+        "    for x in range(0, len(df2)):  \n",
+        "        #if df2.loc[x, 'From'] < 15 and a[0] <= 15:\n",
+        "            # df3.loc[i,'population'] = df3.loc[i, 'population'] + df2.loc[x,'population']\n",
+        "            \n",
+        "        if df2.loc[x, 'From'] >= 65 and a[0] >= 65:  \n",
+        "            df3.loc[i,'population'] = df3.loc[i,'population'] + df2.loc[x,'population']\n",
+        "             \n",
+        "        elif df2.loc[x,'From'] >= a[0] and df2.loc[x,'To'] <= a[1]:  \n",
+        "            df3.loc[i,'population'] = df3.loc[i,'population'] + df2.loc[x,'population']\n",
+        "             \n",
+        "  \n",
+        " "
       ]
     },
     {
@@ -128,12 +405,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 279,
       "metadata": {
-        "id": "qPcgpC_mFdRz"
+        "metadata": {}
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "n = 2164\n",
+        "(df1['Percentage'] / 100) * n\n",
+        "df1['observed'] = (df1['Percentage'] / 100) * n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 278,
+      "metadata": {
+        "id": "qPcgpC_mFdRz",
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    0.069151\n",
+              "1    0.143830\n",
+              "2    0.152934\n",
+              "3    0.179590\n",
+              "4    0.165403\n",
+              "5    0.071538\n",
+              "6    0.217554\n",
+              "Name: percentage_ex, dtype: float64"
+            ]
+          },
+          "execution_count": 278,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df3['percentage_ex'] = df3['population'] / df3['population'].sum()\n",
+        "df3['percentage_ex']"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -148,12 +460,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 280,
       "metadata": {
-        "id": "SBuiaY1QI6Lz"
+        "id": "SBuiaY1QI6Lz",
+        "metadata": {}
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Significance level  ⍺ = 0.05\n",
+            "Sample size         n = 2161\n",
+            "k = 7; df = 6\n",
+            "Chi-squared        χ² = 6.6997\n",
+            "Critical value      g = 12.5916\n",
+            "p-value             p = 0.3495\n"
+          ]
+        }
+      ],
+      "source": [
+        "observed =   df1['observed']\n",
+        "expected_p = df3['percentage_ex']\n",
+        "\n",
+        "alpha = 0.05               # Significance level\n",
+        "n = sum(observed)          # Sample size\n",
+        "k = len(observed)          # Number of categories\n",
+        "dof = k - 1                # Degrees of freedom\n",
+        "expected = expected_p * n  # Expected absolute frequencies in the sample\n",
+        "g = stats.chi2.isf(alpha, df=dof)  # Critical value\n",
+        "\n",
+        "# Goodness-of-fit-test in Python:\n",
+        "chi2, p = stats.chisquare(f_obs=observed, f_exp=expected)\n",
+        "\n",
+        "print(\"Significance level  ⍺ = %.2f\" % alpha)\n",
+        "print(\"Sample size         n = %d\" % n)\n",
+        "print(\"k = %d; df = %d\" % (k, dof))\n",
+        "print(\"Chi-squared        χ² = %.4f\" % chi2)\n",
+        "print(\"Critical value      g = %.4f\" % g)\n",
+        "print(\"p-value             p = %.4f\" % p)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -213,7 +559,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.2"
+      "version": "3.10.13"
     },
     "orig_nbformat": 4
   },
