--- a/2-analysis-1-var/lab-2.01-metro.ipynb
+++ b/2-analysis-1-var/lab-2.01-metro.ipynb
@@ -11,9 +11,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "MvwMKfrI8X-p"
+        "id": "MvwMKfrI8X-p",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
@@ -51,13 +52,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "leGjVujR5miN"
+        "id": "leGjVujR5miN",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
         "a = np.array([87, 42, 0, 62, 124, 0, 58, 37, 74, 94, 182, 23, 17, 62, 29, 17, 82, 54, 0, 45])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "54.45\n",
+            "54.5\n"
+          ]
+        }
+      ],
+      "source": [
+        "mean = a.mean()\n",
+        "print(mean)\n",
+        "\n",
+        "iqr = np.quantile(a, 0.75) - np.quantile(a, 0.25)\n",
+        "print(iqr)\n"
       ]
     }
   ],
@@ -71,7 +97,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
     },
     "orig_nbformat": 4
   },
