--- a/2-analysis-1-var/lab-2.02-coffee-shop.ipynb
+++ b/2-analysis-1-var/lab-2.02-coffee-shop.ipynb
@@ -11,9 +11,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "MvwMKfrI8X-p"
+        "id": "MvwMKfrI8X-p",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
@@ -49,17 +50,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BntQ7l2L83tu",
+        "metadata": {},
         "outputId": "6fd7374e-5c0b-482f-9baa-5d704eb8a44c"
       },
       "outputs": [],
       "source": [
         "times = np.array([17, 15, 9, 31, 33, 41, 8, 14, 13, 22, 27, 43, 32, 14])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "19.5\n",
+            "35\n",
+            "14.0 19.5 31.75 [14.   19.5  31.75]\n",
+            "17.75\n"
+          ]
+        }
+      ],
+      "source": [
+        "median = np.median(times)\n",
+        "rang = times.max() - times.min() \n",
+        "rang = np.ptp(times)\n",
+        "q1 = np.quantile(times, 0.25)\n",
+        "q2 = np.quantile(times, 0.50)\n",
+        "q3 = np.quantile(times, 0.75)\n",
+        "q = np.quantile(times,[.25,.5,.75])\n",
+        "iqr = q3 - q1\n",
+        "\n",
+        "print(median)\n",
+        "print(rang)\n",
+        "print(q1, q2, q3, q)\n",
+        "print(iqr)\n"
       ]
     }
   ],
@@ -73,7 +109,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
     },
     "orig_nbformat": 4
   },
