--- a/5-bivariate-qual-quant/lab-5.03-computer-training.ipynb
+++ b/5-bivariate-qual-quant/lab-5.03-computer-training.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "QnEzGI2its2h",
         "metadata": {}
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -139,7 +139,7 @@
               "5                   67           88"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "metadata": {}
       },
@@ -162,7 +162,7 @@
               "<Axes: >"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {
         "metadata": {}
       },
@@ -194,7 +194,7 @@
               "TtestResult(statistic=-7.494583135258961, pvalue=2.2653242936330844e-09, df=39)"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 6,
       "metadata": {
         "metadata": {}
       },
@@ -216,7 +216,7 @@
               "1.61935192361693"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -234,8 +234,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Glass delta\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 7,
       "metadata": {
         "metadata": {}
       },
