--- a/7-time-series/lab-7.02-aircraft-engines.ipynb
+++ b/7-time-series/lab-7.02-aircraft-engines.ipynb
@@ -11,13 +11,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "PwYaTAjzVNyI"
+        "id": "PwYaTAjzVNyI",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
-        "# Package imports"
+        "# Package imports# Package imports\n",
+        "import numpy as np                                  # \"Scientific computing\"\n",
+        "import pandas as pd                                 # Dataframe\n",
+        "\n",
+        "import scipy.stats as stats                         # Statistical tests\n",
+        "from sklearn.linear_model import LinearRegression   # Linear regression model\n",
+        "\n",
+        "import matplotlib.pyplot as plt                     # Basic visualisation\n",
+        "from statsmodels.graphics.mosaicplot import mosaic  # Mosaic plot\n",
+        "import seaborn as sns                               # Advanced dataviz"
       ]
     },
     {
@@ -80,7 +90,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.10.13"
     },
     "orig_nbformat": 4
   },
