--- a/7-time-series/lab-7.03-car-sales.ipynb
+++ b/7-time-series/lab-7.03-car-sales.ipynb
@@ -11,13 +11,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "PwYaTAjzVNyI"
+        "id": "PwYaTAjzVNyI",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
-        "# Package imports"
+        "# Package imports# Package imports\n",
+        "import numpy as np                                  # \"Scientific computing\"\n",
+        "import pandas as pd                                 # Dataframe\n",
+        "\n",
+        "import scipy.stats as stats                         # Statistical tests\n",
+        "from sklearn.linear_model import LinearRegression   # Linear regression model\n",
+        "\n",
+        "import matplotlib.pyplot as plt                     # Basic visualisation\n",
+        "from statsmodels.graphics.mosaicplot import mosaic  # Mosaic plot\n",
+        "import seaborn as sns                               # Advanced dataviz"
       ]
     },
     {
@@ -47,10 +57,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "execution_count": 6,
+      "metadata": {
+        "metadata": {}
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "59.17999999999999\n"
+          ]
+        }
+      ],
+      "source": [
+        "m = 3 # forecast week 3\n",
+        "x_t = 30 # 30 sold current week\n",
+        "X_t_minus = 50 # level estim sales 50 cars per week\n",
+        "b_t_minus = 6 # trend estim sales 6 cars per week\n",
+        "\n",
+        "a = 0.3\n",
+        "b = 0.3\n",
+        "\n",
+        "X_t = a * x_t + (1 - a) * (X_t_minus +  b_t_minus)\n",
+        "bt = b * (X_t - X_t_minus) + (1 - b) * b_t_minus\n",
+        "Ftm = X_t + m * bt\n",
+        "print(Ftm)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,7 +118,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.10.13"
     },
     "orig_nbformat": 4
   },
