--- a/7-time-series/summary-time.ipynb
+++ b/7-time-series/summary-time.ipynb
@@ -105,6 +105,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sure, here's the information organized in a markdown table:\n",
+    "\n",
+    "| Technique                    | When to Use                                                                                       |\n",
+    "|------------------------------|--------------------------------------------------------------------------------------------------|\n",
+    "| Linear Regression            | - Understanding the relationship between variables and making predictions based on historical data. |\n",
+    "|                              | - Suitable for data with clear linear trends and relationships between variables.                  |\n",
+    "| Simple Moving Average (SMA)  | - Smoothing out short-term fluctuations to identify long-term trends.                              |\n",
+    "|                              | - Useful for data with noise or irregular fluctuations.                                            |\n",
+    "| Simple Exponential Smoothing (SES) | - Forecasting data with no clear trend or seasonality.                                               |\n",
+    "|                               | - Provides weighted averages of past observations, giving more weight to recent data.                |\n",
+    "| Double Exponential Smoothing (DES - Holt) | - Modeling data with trend but no seasonality.                                                        |\n",
+    "|                                         | - Extends SES to capture trend information in addition to level (average).                             |\n",
+    "| Holt-Winters Method          | - Modeling data with both trend and seasonality.                                                    |\n",
+    "|                              | - Captures both long-term trends and seasonal variations in the data.                                |\n",
+    "\n",
+    "This table summarizes when to use each time series analysis technique based on whether the data has a trend, seasonality, or both."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Constant"
    ]
   },
