--- a/RepeatExercises/DSAI_Sample_Exam_2023.ipynb
+++ b/RepeatExercises/DSAI_Sample_Exam_2023.ipynb
@@ -25,9 +25,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "47S88fI_5QL1"
+        "id": "47S88fI_5QL1",
+        "metadata": {}
       },
       "outputs": [],
       "source": [
@@ -102,6 +103,19 @@
         "1. Is this a random sample? Explain.\n",
         "2. What type of error is being made here?\n",
         "3. Is this a good sample? Explain."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# No the ones with higher hight are not selected\n",
+        "# Non sampling error\n",
+        "# No only the 10 smaller are selected\n",
+        "# each group girl / boys may not represent to population\n",
+        "\n"
       ]
     },
     {
@@ -319,6 +333,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "A-SdGg9h0Ecu"
+      },
       "source": [
         "## Question 8 \n",
         "\n",
@@ -334,23 +351,20 @@
         "(5) Approximately how much will be the maintenance cost of a truck driving 5000 kilometres.  \n",
         "(6) What will be the approximate fixed cost of a truck even if it has not driven a single kilometre?  \n",
         "\n"
-      ],
-      "metadata": {
-        "id": "A-SdGg9h0Ecu"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bTi-3jOZ0Ecz"
+      },
+      "outputs": [],
       "source": [
         "sample_data = pd.DataFrame(data = {\n",
         "    'mileage': [10500, 9700, 9200, 8300, 6500, 4500, 3500, 2200, 1800, 9800, 6600, 3600, 2500, 3100, 8400, 9700, 1800, 10000, 9800, 9900, 1100, 2600, 10300],\n",
         "    'maintenance costs': [908.56, 751.12, 793.55, 619.61, 380.11, 368.72, 235.32, 174.93, 256.30, 799.58, 436.04, 304.25, 226.81, 179.68, 726.65, 810.53, 142.53, 915.53, 812.45, 803.78, 227.32, 231.46, 829.21]})"
-      ],
-      "metadata": {
-        "id": "bTi-3jOZ0Ecz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -464,8 +478,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.10.6"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
     },
     "orig_nbformat": 4,
     "vscode": {
