--- a/cheatsheet/commands.ipynb
+++ b/cheatsheet/commands.ipynb
@@ -604,6 +604,20 @@
     "data = np.random.normal(loc=250, scale=1, size=1000)\n",
     "sns.histplot(data)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slice operator\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
